--- a/src/template.html
+++ b/src/template.html
@@ -361,33 +361,33 @@
     <div class="project-wrapper">
       <!-- <h2 class="section-title dark-blue-text">Projects</h2> -->
 
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Netflix</h3>
+            <h3 class="project-wrapper__text-title">Instagram</h3>
             <div>
               <p class="mb-4">
-                It is an Netflix Clone website.The movies are shown from the IMDB API .The Autentication is working by using the Firebase Autentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
+                It is an Instagram Clone website which works on the Firebase Authentication system.We can able to Post post images and add Caption.We can also able to chat in the Pre-defined Groups.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://goofy-swirles-acbb61.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://instagramnew.netlify.app/">
               See Live
             </a>
-            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Netlifx-Clone">
+            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/instagram">
               Source Code
             </a>
           </div>
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://goofy-swirles-acbb61.netlify.app/" target="_blank">
+            <a href="https://instagramnew.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./assets/Netflix.png" />
+                <img class="img-fluid" src="./assets/instagram.png" />
               </div>
             </a>
           </div>
         </div>
-      </div> -->
+      </div>
 <!-- 
       <div class="row">
         <div class="col-lg-4 col-sm-12">
