--- a/src/template.html
+++ b/src/template.html
@@ -370,7 +370,7 @@
                 It is an Instagram Clone website which works on the Firebase Authentication system.We can able to Post post images and add Caption.We can also able to chat in the Pre-defined Groups.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://instagramnew.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://instagramdhas.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/instagram">
@@ -380,7 +380,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://instagramnew.netlify.app/" target="_blank">
+            <a href="https://instagramdhas.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/instagram.png" />
               </div>
