--- a/src/template.html
+++ b/src/template.html
@@ -276,7 +276,7 @@
                 It is an Netflix Clone website.The movies are shown from the IMDB API .The Autentication is working by using the Firebase Autentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://goofy-swirles-acbb61.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://netflixad.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Netlifx-Clone">
@@ -286,7 +286,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://goofy-swirles-acbb61.netlify.app/" target="_blank">
+            <a href="https://netflixad.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/Netflix.png" />
               </div>
@@ -370,7 +370,7 @@
                 It is an Instagram Clone website which works on the Firebase Authentication system.We can able to Post post images and add Caption.We can also able to chat in the Pre-defined Groups.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://instagramarun.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://instagramad.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/instagram">
@@ -380,7 +380,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://instagramarun.netlify.app/" target="_blank">
+            <a href="https://instagramad.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/instagram.png" />
               </div>
