--- a/src/template.html
+++ b/src/template.html
@@ -57,7 +57,7 @@
                 Hi! I am Arun, a MERN Stack developer focused on Crafting great Web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into Web design. I enjoy creating beautifully designed, intuitive and functional websites.
               </p>
               <p class="about-wrapper__info-text">
-                I'm a Hard working and dedicated Professional MERN Stack Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am Good in HTML5 , CSS3, SCSS , JavaScript , React.js ,Styled Components , Java , Node.js , Express.js and begginer in MongoDB.
+                I'm a Hard working and dedicated Professional MERN Stack Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am Good in HTML5 , CSS3, SCSS , JavaScript , React.js ,Styled Components , Java , Firebase , Node.js , Express.js and begginer in MongoDB.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="">
