--- a/src/template.html
+++ b/src/template.html
@@ -28,7 +28,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Arun</span>
           <br />
-          I'm a MERN Stack Developer.
+          I'm a Front End Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -54,10 +54,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Hi! I am Arun, a MERN Stack developer focused on Crafting great Web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into Web design. I enjoy creating beautifully designed, intuitive and functional websites.
+                Hi! I am Arun, a Front End developer focused on Crafting great Web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into Web design. I enjoy creating beautifully designed, intuitive and functional websites.
               </p>
               <p class="about-wrapper__info-text">
-                I'm a Hard working and dedicated Professional MERN Stack Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am Good in HTML5 , CSS3 , SCSS , JavaScript , React.js , Java , Firebase , Node.js , Express.js and begginer in MongoDB.
+                I'm a Hard working and dedicated Professional Front End Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am Good in HTML5 , CSS3 , SCSS , JavaScript , React.js , Java , Firebase .
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="">
