--- a/src/template.html
+++ b/src/template.html
@@ -54,10 +54,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Hi! I am Arun, a Front End developer focused on Crafting great Web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into Web design. I enjoy creating beautifully designed, intuitive and functional websites.
-              </p>
-              <p class="about-wrapper__info-text">
-                I'm a Hard working and dedicated Professional Front End Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am Good in HTML5 , CSS3 , SCSS , JavaScript , React.js , Java and Firebase .
+                Hi! I am Arun, a front end developer focused on crafting great web experiences. I enjoy creating beautifully designed, intuitive and functional websites.
+                I'm a hard working and dedicated professional front end developer user interface designer with a keen eye for detail, and a determination to deliver the very highest quality. I am motivated, enthusiastic and well organised, with a keen eye for beautiful design, primarily based around user interfaces.I am Good in HTML5 , CSS3 , SCSS , JavaScript , React.js , Java and Firebase .
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="">
@@ -82,9 +80,7 @@
                 <h3 class="project-wrapper__text-title">Dark-Moon(Weather)</h3>
                 <div>
                   <p class="mb-4">
-                    Access current weather data for any location on Earth including over 200,000 cities! 
-                    and process weather data from different sources such as global and local weather 
-                    models, satellites, radars and a vast network of weather stations.
+                    Access current weather data for any location on Earth including over 200,000 cities! .
                     Enjoy user experience.It is Resposive but Most suitable for Mobile Devices!!!
                   </p>
                 </div>
@@ -113,7 +109,7 @@
                 <h3 class="project-wrapper__text-title">Amazon</h3>
                 <div>
                   <p class="mb-4">
-                    It is an Amazon-Clone website.It works on Firebase Auntentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.Zoom Out of 75% for best Experience!!!
+                    It is an Amazon-Clone website.It works on Firebase Authentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.Zoom Out of 75% for best Experience!!!
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://admiring-cray-aa19c3.netlify.app/">
@@ -179,7 +175,7 @@
                 <h3 class="project-wrapper__text-title">Disney Plus</h3>
                 <div>
                   <p class="mb-4">
-                    It is an Completely Responsive website suitable for All the Devices.It works on the Firebase Google Auethentication system.You can see Fantastic Design and Animation in this Website.This gives Similar Experience of the original Disney + .Enjoy User Experience!! 
+                    It is an Completely Responsive website suitable for All the Devices.It works on the Firebase Google Authentication system.You can see Fantastic Design and Animation in this Website.This gives Similar Experience of the original Disney + .Enjoy User Experience!! 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://flamboyant-wozniak-03a3fa.netlify.app/">
@@ -273,7 +269,7 @@
             <h3 class="project-wrapper__text-title">Netflix</h3>
             <div>
               <p class="mb-4">
-                It is an Netflix Clone website.The movies are shown from the IMDB API .The Autentication is working by using the Firebase Autentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
+                It is an Netflix Clone website.The movies are shown from the IMDB API .The Authentication is working by using the Firebase Authentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
               </p>
             </div>
             <a target="_blank" class="cta-btn cta-btn--hero" href="https://netflixad.netlify.app/">
@@ -301,7 +297,7 @@
             <h3 class="project-wrapper__text-title">Whatsapp</h3>
             <div>
               <p class="mb-4">
-               It is an Whatsapp Clone website.The login Functionality works on the Firebase authentication system.It lokks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.It works on both Mobiles and the desktop devices.Enjoy user Experience!!!
+               It is an Whatsapp Clone website.The login Functionality works on the Firebase Authentication system.It looks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.It works on both Mobiles and the desktop devices.Enjoy user Experience!!!
               </p>
             </div>
             <a target="_blank" class="cta-btn cta-btn--hero" href="https://whatsappnew.netlify.app/">
@@ -329,7 +325,7 @@
             <h3 class="project-wrapper__text-title">College Website</h3>
             <div>
               <p class="mb-4">
-                It is an College Details updating Website.It is easy to use in both the Mobile devices and the Desktop devices.It is the most Responsive Suitable for any Users.Enjpy User Experience!!!
+                Every site has to provide vital information to current students, staff, parents, and alumni. At the same time, a college’s website needs to empower new students and donors and help recruit staff.To meet these objectives, college websites need to be kept up-to-date with upcoming events, announcements, and information on classes, majors, and programs. 
               </p>
             </div>
             <a target="_blank" class="cta-btn cta-btn--hero" href="https://gcesalem.netlify.app/">
