--- a/src/template.html
+++ b/src/template.html
@@ -28,7 +28,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Arun</span>
           <br />
-          I'm a Front End Developer.
+          I'm a Full Stack Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -54,7 +54,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Hi! I am Arun, a front end developer focused on crafting great web experiences. I enjoy creating beautifully designed, intuitive and functional websites.
+                Hi! I am Arun, a Full Stack developer focused on crafting great web experiences. I enjoy creating beautifully designed, intuitive and functional websites.
                 I'm a hard working and dedicated professional front end developer user interface designer with a keen eye for detail, and a determination to deliver the very highest quality. I am motivated, enthusiastic and well organised, with a keen eye for beautiful design, primarily based around user interfaces.I am Good in HTML5 , CSS3 , SCSS , JavaScript , React.js , Java and Firebase .
               </p>
               <span class="d-flex mt-3">
@@ -131,7 +131,7 @@
             </div>
           </div>
   
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Spotify</h3>
@@ -156,7 +156,7 @@
                 </a>
               </div>
             </div>
-          </div>    
+          </div>     -->
         
         </div>
       </div>
@@ -272,7 +272,7 @@
                 It is an Netflix Clone website.The movies are shown from the IMDB API .The Authentication is working by using the Firebase Authentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://netflixad.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://fantastic-alpaca-66d6b3.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Netlifx-Clone">
@@ -328,7 +328,7 @@
                 Every site has to provide vital information to current students, staff, parents, and alumni. At the same time, a college’s website needs to empower new students and donors and help recruit staff.To meet these objectives, college websites need to be kept up-to-date with upcoming events, announcements, and information on classes, majors, and programs. 
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://gcesalem.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://technoblaze23.netlify.app">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Acadamics">
@@ -366,7 +366,7 @@
                 It is an Instagram Clone website which works on the Firebase Authentication system.We can able to Post post images and add Caption.We can also able to chat in the Pre-defined Groups.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://instagramad.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://insfagramclone.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/instagram">
