Update Technoblaze event details to 23.0

--- a/src/template.html
+++ b/src/template.html
@@ -388,13 +388,13 @@
       <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Technoblaze 22.O</h3>
+            <h3 class="project-wrapper__text-title">Technoblaze 23.O</h3>
             <div>
               <p class="mb-4">
-                Technoblaze 22.0 is an inter college technical and non- technical carnival which is organised by the Society for the Advancement of Civil Engineering of Government College of Engineering, Salem. It takes you on a complete ride to technical extravaganza
+                Technoblaze 23.0 is an inter college technical and non- technical carnival which is organised by the Society for the Advancement of Civil Engineering of Government College of Engineering, Salem. It takes you on a complete ride to technical extravaganza
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://www.technoblaze22.com/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://technoblaze23.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/technoBlaze22.0">
