Update project links in template.html

--- a/src/template.html
+++ b/src/template.html
@@ -282,7 +282,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://netflixad.netlify.app/" target="_blank">
+            <a href="https://fantastic-alpaca-66d6b3.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/Netflix.png" />
               </div>
@@ -328,7 +328,7 @@
                 Every site has to provide vital information to current students, staff, parents, and alumni. At the same time, a college’s website needs to empower new students and donors and help recruit staff.To meet these objectives, college websites need to be kept up-to-date with upcoming events, announcements, and information on classes, majors, and programs. 
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://technoblaze23.netlify.app">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://gcesalem.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Acadamics">
@@ -376,7 +376,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://instagramad.netlify.app/" target="_blank">
+            <a href="https://insfagramclone.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/instagram.png" />
               </div>
@@ -404,7 +404,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://www.technoblaze22.com/" target="_blank">
+            <a href="https://technoblaze23.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/technoblaze.png" />
               </div>
